kubernetes/apps/ai/honcho/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: honcho-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: honcho
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: bifrost
        - matchLabels:
            app.kubernetes.io/name: embedder
        - matchLabels:
            app.kubernetes.io/component: database
        - matchLabels:
            app: honcho-dragonfly
    - toFQDNs:
        - matchName: openaipublic.blob.core.windows.net
      toPorts:
        - ports:
            - port: "443"
